--- a/app/src/main/res/layout/fragment_add_recipe_data.xml
+++ b/app/src/main/res/layout/fragment_add_recipe_data.xml
@@ -4,108 +4,176 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddRecipeDataFragment">
+    tools:context=".ui.view.main.recipe.AddRecipeDataFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/topAppBar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-                app:title="Nueva Receta" />
-
-        </com.google.android.material.appbar.AppBarLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0">
 
-            <!--Image View para imagen de receta-->
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/ivFotoRecetaHolder"
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayout"
                 android:layout_width="match_parent"
-                android:layout_height="140dp">
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/ivFotoReceta"
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/topAppBar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="?attr/actionBarSize"
+                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                    app:title="Nueva Receta" />
 
-            </com.google.android.material.card.MaterialCardView>
+            </com.google.android.material.appbar.AppBarLayout>
 
-            <!--Text Input para nombre de receta-->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tfNombreReceta"
+            <LinearLayout
+                android:id="@+id/InfoContainerLinearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/nombre_receta_label">
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:divider="@drawable/divider"
+                android:orientation="vertical"
+                android:showDividers="middle"
+                app:layout_constraintVertical_bias="0">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <!--Image View para imagen de receta-->
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/ivFotoRecetaHolder"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="140dp">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <ImageView
+                        android:id="@+id/ivFotoReceta"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
 
-            <!--Text Input para autor de receta-->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tfAutorReceta"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/autor_receta_label">
+                </com.google.android.material.card.MaterialCardView>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!--Combo Input para categoria de receta-->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/tfCategoriaReceta"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/categoria_receta_label">
-
-                <AutoCompleteTextView
+                <!--Text Input para nombre de receta-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tfNombreReceta"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
-                    app:simpleItems="@array/categorias_receta"
-                    tools:ignore="LabelFor" />
+                    android:hint="@string/nombre_receta_label">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
-            <!--Combo Input para tiempo de receta-->
+                </com.google.android.material.textfield.TextInputLayout>
 
+                <!--Text Input para autor de receta-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tfAutorReceta"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/autor_receta_label">
 
-            <!--Combo Input para medida de receta-->
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
+                </com.google.android.material.textfield.TextInputLayout>
 
-            <!--Combo Input para pasos de receta-->
+                <!--Combo Input para categoria de receta-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tfCategoriaReceta"
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/categoria_receta_label">
 
+                    <AutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="none"
+                        app:simpleItems="@array/categorias_receta"
+                        tools:ignore="LabelFor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <!--Combo Input para tiempo de receta-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tfTiempoReceta"
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/tiempo_receta_label">
+
+                    <AutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="none"
+                        app:simpleItems="@array/tiempos_receta"
+                        tools:ignore="LabelFor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <!--Combo Input para medida de receta-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tfMedidaReceta"
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/medida_receta_label">
+
+                    <AutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="none"
+                        app:simpleItems="@array/medidas_receta"
+                        tools:ignore="LabelFor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <!--Combo Input para pasos de receta-->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tfPasosReceta"
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/pasos_receta_label">
+
+                    <AutoCompleteTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="none"
+                        app:simpleItems="@array/pasos_receta"
+                        tools:ignore="LabelFor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnSiguiente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="12dp"
+            android:text="@string/siguiente"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
