--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,9 +15,9 @@
         <item>PruebaMed2</item>
     </array>
     <array name="pasos_receta">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
+        <item>1 Paso</item>
+        <item>2 Pasos</item>
+        <item>3 Pasos</item>
+        <item>4 Pasos</item>
     </array>
 </resources>
