Cambios minimos relacionados con las nuevas entidades

--- a/app/src/main/res/layout/fragment_add_recipe_data.xml
+++ b/app/src/main/res/layout/fragment_add_recipe_data.xml
@@ -56,7 +56,8 @@
                         android:id="@+id/ivFotoReceta"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scaleType="centerCrop"/>
+                        android:scaleType="centerCrop"
+                        android:src="@color/md_theme_light_surface"/>
 
                 </com.google.android.material.card.MaterialCardView>
 
