--- a/app/src/main/res/layout/item_recipe_overview.xml
+++ b/app/src/main/res/layout/item_recipe_overview.xml
@@ -19,7 +19,8 @@
             android:layout_height="194dp"
             android:contentDescription="@string/content_description_receta"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/placeholder" />
+            app:srcCompat="@drawable/placeholder"
+            android:adjustViewBounds="false"/>
 
         <LinearLayout
             android:layout_width="match_parent"
