Navegacion entre el Add Data y Detail de Recetas

--- a/app/src/main/res/layout/item_recipe_overview.xml
+++ b/app/src/main/res/layout/item_recipe_overview.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipe_info_card"
+    style="?attr/materialCardViewElevatedStyle"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,13 +13,20 @@
         android:orientation="vertical">
 
         <!-- Media -->
-        <ImageView
-            android:id="@+id/ivReceta"
+        <com.google.android.material.card.MaterialCardView
+            style="?attr/materialCardViewFilledStyle"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:contentDescription="@string/content_description_receta"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/placeholder"/>
+            android:layout_height="140dp">
+
+            <ImageView
+                android:id="@+id/ivReceta"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:contentDescription="@string/content_description_receta"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/placeholder" />
+
+        </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +40,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/placeholderText_nombreReceta"
-                android:textAppearance="?attr/textAppearanceTitleMedium" />
+                android:textAppearance="?attr/textAppearanceTitleLarge" />
+
+            <TextView
+                android:id="@+id/tvAutorReceta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/placeholderText_autorReceta"
+                android:textAppearance="?attr/textAppearanceTitleSmall" />
 
             <TextView
                 android:id="@+id/tvTiempoPrepReceta"
@@ -48,13 +62,35 @@
                 android:id="@+id/tvCaloriesReceta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:text="@string/placeholderText_kcalReceta"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="?android:attr/textColorSecondary" />
 
-        </LinearLayout>
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/tvPendiente"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal"
+                android:visibility="invisible"
+                tools:visibility="visible">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="4dp"
+                    app:srcCompat="@drawable/ic_outline_info_24" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pending"
+                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:textColor="@color/md_theme_dark_error" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
