--- a/app/src/main/res/layout/fragment_add_recipe_data.xml
+++ b/app/src/main/res/layout/fragment_add_recipe_data.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/topAppBar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                    app:navigationIcon="@drawable/ic_baseline_close_24"
                     app:title="Nueva Receta" />
 
             </com.google.android.material.appbar.AppBarLayout>
@@ -156,7 +156,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="12dp"
-            android:text="@string/siguiente"
+            android:text="@string/next"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1"
