--- a/app/src/main/res/layout/activity_see_recipe.xml
+++ b/app/src/main/res/layout/activity_see_recipe.xml
@@ -31,10 +31,11 @@
                     android:id="@+id/topAppBar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    app:navigationIcon="@drawable/ic_baseline_close_24"
-                    app:title="Nombre Receta"
+                    android:elevation="0dp"
                     app:menu="@menu/recipe_top_app_bar"
-                    android:elevation="0dp"/>
+                    app:navigationIcon="@drawable/ic_baseline_close_24"
+                    app:subtitle="Autor Receta"
+                    app:title="Nombre Receta" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -63,24 +64,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="140dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder"/>
+                    android:src="@drawable/placeholder" />
 
             </com.google.android.material.card.MaterialCardView>
 
             <!--Text Input para nombre de receta-->
-            <com.google.android.material.textfield.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/nombre_receta_label">
+                android:layout_height="wrap_content">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tfNombreReceta"
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:maxLines="1" />
+                    android:hint="@string/nombre_receta_label"
+                    android:visibility="gone">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/tfNombreReceta"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:maxLines="1" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+
+            </LinearLayout>
 
             <!--Text Input para autor de receta-->
             <com.google.android.material.textfield.TextInputLayout
