--- a/app/src/main/res/layout/activity_see_recipe.xml
+++ b/app/src/main/res/layout/activity_see_recipe.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,12 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0">
+        android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -22,148 +17,224 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true">
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                style="?attr/collapsingToolbarLayoutMediumStyle"
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/collapsingToolbarLayoutMediumSize">
-
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/topAppBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:elevation="0dp"
-                    app:menu="@menu/recipe_top_app_bar"
-                    app:navigationIcon="@drawable/ic_baseline_close_24"
-                    app:subtitle="Autor Receta"
-                    app:title="Nombre Receta" />
-
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="0dp"
+                app:layout_collapseMode="pin"
+                app:menu="@menu/recipe_top_app_bar"
+                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                app:subtitle="Autor Receta"
+                app:title="Nombre Receta" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout
-            android:id="@+id/InfoContainerLinearLayout"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="12dp"
-            android:divider="@drawable/divider"
-            android:orientation="vertical"
-            android:showDividers="middle"
-            app:layout_constraintVertical_bias="0">
+            android:fillViewport="true">
 
-            <!--Image View para imagen de receta-->
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/ivFotoRecetaHolder"
-                android:layout_width="match_parent"
-                android:layout_height="140dp">
-
-                <ImageView
-                    android:id="@+id/ivFotoReceta"
-                    android:layout_width="match_parent"
-                    android:layout_height="140dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder" />
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <!--Text Input para nombre de receta-->
             <LinearLayout
+                android:id="@+id/InfoContainerLinearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:divider="@drawable/divider"
+                android:orientation="vertical"
+                android:showDividers="middle"
+                app:layout_constraintVertical_bias="0">
 
-                <com.google.android.material.textfield.TextInputLayout
+                <!--Image View para imagen de receta-->
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cvFotoRecetaHolder"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/nombre_receta_label"
-                    android:visibility="gone">
+                    android:layout_height="140dp">
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/tfNombreReceta"
+                    <ImageView
+                        android:id="@+id/ivFotoReceta"
+                        android:layout_width="match_parent"
+                        android:layout_height="140dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/placeholder" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <!--Seccion de preparacion e Ingredientes-->
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/cvPreparacionReceta"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:maxLines="1" />
+                        android:orientation="vertical"
+                        android:padding="16dp">
 
-                </com.google.android.material.textfield.TextInputLayout>
+                        <!-- Title, secondary and supporting text -->
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/preparation_label"
+                            android:textAppearance="?attr/textAppearanceTitleLarge" />
 
+                        <TextView
+                            android:id="@+id/tvTiempoPrepReceta"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:text="@string/placeholderText_tiempoEst"
+                            android:textAppearance="?attr/textAppearanceTitleSmall" />
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:text="@string/ingridient_label"
+                            android:textAppearance="?attr/textAppearanceTitleSmall" />
+
+                        <!-- Lista de Ingredientes (Max 10) -->
+                        <TextView
+                            android:id="@+id/tvIngrediente1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente7"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                        <TextView
+                            android:id="@+id/tvIngrediente10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:text="@string/placeholderText_ingrediente"
+                            android:textAppearance="?attr/textAppearanceBodyMedium"
+                            android:textColor="?android:attr/textColorSecondary"
+                            android:visibility="gone"
+                            tools:visibility="" />
+
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <!--Recycler View de Pasos-->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcvPasos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false" />
+
+                <!--Terminar la edicion de una receta-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:layout_marginBottom="12dp"
+                    android:visibility="invisible">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/finish" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <!--Text Input para autor de receta-->
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/autor_receta_label">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tfAutorReceta"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:maxLines="1" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!--Combo Input para categoria de receta-->
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/categoria_receta_label">
-
-                <AutoCompleteTextView
-                    android:id="@+id/tfCategoriaReceta"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="none"
-                    app:simpleItems="@array/categorias_receta"
-                    tools:ignore="LabelFor" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!--Combo Input para tiempo de receta-->
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/tiempo_receta_label">
-
-                <AutoCompleteTextView
-                    android:id="@+id/tfTiempoReceta"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="none"
-                    app:simpleItems="@array/tiempos_receta"
-                    tools:ignore="LabelFor" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <!--Combo Input para pasos de receta-->
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/pasos_receta_label">
-
-                <AutoCompleteTextView
-                    android:id="@+id/tfPasosReceta"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="none"
-                    app:simpleItems="@array/pasos_receta"
-                    tools:ignore="LabelFor" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
