--- a/app/src/main/res/layout/fragment_add_recipe_detail.xml
+++ b/app/src/main/res/layout/fragment_add_recipe_detail.xml
@@ -6,45 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.main.recipe.AddRecipeDetailFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0">
+            android:fitsSystemWindows="true">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appBarLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fitsSystemWindows="true">
-
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    style="?attr/collapsingToolbarLayoutMediumStyle"
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/topAppBar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/collapsingToolbarLayoutMediumSize">
+                    android:layout_height="?attr/actionBarSize"
+                    android:elevation="0dp"
+                    app:layout_collapseMode="pin"
+                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                    app:subtitle="Autor Receta"
+                    app:title="Nombre Receta" />
 
-                    <com.google.android.material.appbar.MaterialToolbar
-                        android:id="@+id/topAppBar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        android:elevation="0dp"
-                        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-                        app:subtitle="Autor Receta"
-                        app:subtitleCentered="true"
-                        app:title="Nombre Receta"
-                        app:titleCentered="true" />
+        </com.google.android.material.appbar.AppBarLayout>
 
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-            </com.google.android.material.appbar.AppBarLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fillViewport="false">
 
             <LinearLayout
                 android:id="@+id/InfoContainerLinearLayout"
@@ -107,7 +95,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente2"
@@ -118,7 +106,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente3"
@@ -129,7 +117,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente4"
@@ -140,7 +128,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente5"
@@ -151,7 +139,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente6"
@@ -162,7 +150,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente7"
@@ -173,7 +161,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente8"
@@ -184,7 +172,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente9"
@@ -195,7 +183,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                             <TextView
                                 android:id="@+id/tvIngrediente10"
@@ -206,7 +194,7 @@
                                 android:textAppearance="?attr/textAppearanceBodyMedium"
                                 android:textColor="?android:attr/textColorSecondary"
                                 android:visibility="gone"
-                                tools:visibility=""/>
+                                tools:visibility="" />
 
                         </LinearLayout>
 
@@ -235,7 +223,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcvPasos"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false" />
 
                 <!--Agregar un Nuevo Paso-->
                 <Button
@@ -249,7 +238,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="end">
+                    android:gravity="end"
+                    android:layout_marginBottom="12dp">
 
                     <Button
                         android:id="@+id/btnTerminar"
@@ -261,8 +251,8 @@
 
             </LinearLayout>
 
-        </LinearLayout>
+        </ScrollView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </FrameLayout>
