TODO implementacion ocultar teclado

--- a/app/src/main/res/layout/fragment_add_recipe_data.xml
+++ b/app/src/main/res/layout/fragment_add_recipe_data.xml
@@ -93,6 +93,7 @@
 
                 <!--Combo Input para categoria de receta-->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tvCategoria"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -110,6 +111,7 @@
 
                 <!--Combo Input para tiempo de receta-->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tvTiempoComida"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
